# UpgradedInput

./: LICENSE  README.md  pyproject.toml
src/UpgradedInput/: __init__.py  main.py  test.py
tests/: test_conversion.py  test_hooks.py  test_init.py  test_input_basic.py  test_module.py
