[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "UpgradedInput"
version = "0.0.8.5"
authors = [
  { name="riccy10210"},
]
description = "A better input() for python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Ricca665/UpgradedInput"
Issues = "https://github.com/Ricca665/UpgradedInput/issues"
